--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,11 +6,12 @@
         <img class="img-responsive" src="img/profile.jpg" alt="profile-pic" />
         <div class="intro-text">
           <!-- <span class="name">{{ site.title }}</span> -->
-          <hr class="star-light" />
-          <span class="skills">{{ site.skills }}</span>
-          <hr class="star-light" />
-          <span class="skills">{{ site.services }}</span>
-          <hr class="star-light" />
+            <hr class="star-light" />
+            <span class="skills">{{ site.skills }}</span>
+            <hr class="star-light" />
+            <span class="callme">{{ site.callme }}</span>
+            <hr class="star-light" />
+          </div>
         </div>
       </div>
     </div>
